# default-project-structure

./: .gitignore  CMakeLists.txt  README.md  static_code_analysis.txt
.github/workflows/: workflow.yml
algorithms/: CMakeLists.txt
algorithms/include/: RingBuffer.h
algorithms/tests/: RingBufferTest.cpp
api/: CMakeLists.txt
api/include/: BinarySemaphore.h  Mutex.h  PrioInheritMutex.h  RealtimeThread.h  Semaphore.h  Thread.h
api/source/: BinarySemaphore.cpp  PrioInheritMutex.cpp  RealtimeThread.cpp
api/tests/: BinarySemaphoreTest.cpp  PrioInheritMutexTest.cpp  RealtimeThreadTest.cpp  UdpSocketTest.cpp
app/source/: Main.cpp
cmake/: CrossToolchain.cmake
features/: CMakeLists.txt
features/include/: Feature.h  Helloworld.h
features/source/: Feature.cpp  Helloworld.cpp
scripts/: .Project.sh.swp  Build.sh  Install.sh  Project.sh  Statistics.sh  Test.sh
source/: Main.cpp
source/features/: CMakeLists.txt
source/features/include/: FeatureTemp.h
source/features/source/: FeatureTemp.cpp
source/system/: CMakeLists.txt
system/: CMakeLists.txt
system/include/: Control.h  Services.h
system/source/: Control.cpp  Services.cpp
system/tests/: ControlTest.cpp
test/: CMakeLists.txt  MainTest.cpp  Makefile
test/tests/: Template.cpp
